[tool.poetry]
name = "stankin-multitool-bot"
version = "0.1.0"
description = "Telegram бот для студентов МГТУ СТАНКИН"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.13.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
pytz = "^2024.2"
aiofiles = "^23.2.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

